[tool.poetry]
name = "phone-book-with-assistant-manager"
version = "0.1.0"
description = "project that I work on to learn python"
authors = ["iamleeon <165953114+iamleeon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
